Added login/regisration authentication

--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "eGovSA",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/j-G6PUes.png",
     "scheme": "egovsa",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
