--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "egovsa",
   "main": "expo-router/entry",
-  "version": "1.0.0"
-},
+  "version": "1.0.0",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -13,14 +12,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-    "expo": "~54.0.9",
-    "@rneui/themed": "^4.0.0-rc.8",
+    "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.57.4",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
+    "expo-crypto": "~15.0.7",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
@@ -42,13 +42,13 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1",
-    "undefined": "expo-splash-screen\\"
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
     "typescript": "~5.9.2"
+  },
   "private": true
 }
