--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "@react-navigation/stack": "^7.4.8",
-    "@supabase/supabase-js": "^2.57.4",
+    "@supabase/supabase-js": "^2.74.0",
     "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
@@ -27,6 +27,7 @@
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-image": "~3.0.8",
+    "expo-image-picker": "~17.0.8",
     "expo-linking": "~8.0.8",
     "expo-router": "~6.0.7",
     "expo-secure-store": "~15.0.7",
@@ -45,7 +46,6 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.21.0",
-    "react-native-worklets": "0.5.1"
     "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
