--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
-  "@react-navigation/stack": "^7.4.8",
-  "@supabase/supabase-js": "^2.74.0",
-  "axios": "^1.12.2",
+    "@react-navigation/stack": "^7.4.8",
+    "@supabase/supabase-js": "^2.74.0",
+    "axios": "^1.12.2",
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
@@ -37,6 +37,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.7",
     "expo-web-browser": "~15.0.7",
+    "jsesc": "^3.1.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
