--- a/app.json
+++ b/app.json
@@ -40,7 +40,8 @@
         }
       ],
       "expo-secure-store",
-      "expo-splash-screen\\"
+      "expo-splash-screen\\",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true,
