--- a/eGovSa-Backend/src/main/resources/application.properties
+++ b/eGovSa-Backend/src/main/resources/application.properties
@@ -3,6 +3,8 @@ spring.datasource.url=jdbc:postgresql://aws-1-ap-southeast-1.pooler.supabase.com
 spring.datasource.username=postgres.buqqhpqxldqhiazpluvb
 spring.datasource.password=Nyuleka@2004
 spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=${PORT:8080}
+
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
