--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "build:dev:android": "eas build --profile development --platform android",
@@ -28,6 +28,7 @@
     "expo": "~54.0.9",
     "expo-constants": "~18.0.9",
     "expo-crypto": "~15.0.7",
+    "expo-dev-client": "~6.0.16",
     "expo-device": "~8.0.9",
     "expo-document-picker": "^14.0.7",
     "expo-font": "~14.0.8",
@@ -61,6 +62,7 @@
     "@types/react": "~19.1.0",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "supabase": "^2.53.6",
     "typescript": "~5.9.2"
   },
   "private": true
