--- a/eGovSa-Backend/pom.xml
+++ b/eGovSa-Backend/pom.xml
@@ -72,6 +72,18 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
+        <!-- Supabase Storage Client -->
+        <dependency>
+            <groupId>io.supabase</groupId>
+            <artifactId>supabase-kt</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <!-- OkHttp for HTTP requests (required by Supabase) -->
+        <dependency>
+            <groupId>com.squareup.okhttp3</groupId>
+            <artifactId>okhttp</artifactId>
+            <version>4.12.0</version>
+        </dependency>
     </dependencies>
 
     <build>
