--- a/app.json
+++ b/app.json
@@ -2,9 +2,9 @@
   "expo": {
     "name": "eGovSA",
     "slug": "eGovSA",
-    "version": "1.0.0",
+    "version": "2.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/j-G6PUes.jpg",
+    "icon": "./assets/images/splash.jpg",
     "scheme": "egovsa",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -16,11 +16,11 @@
       }
     },
     "android": {
-      "icon": "./assets/images/j-G6PUes.jpg",
+      "icon": "./assets/images/splash.jpg",
       "adaptiveIcon": {
         "backgroundColor": "#de6c0fff",
-        "foregroundImage": "./assets/images/j-G6PUes.jpg",
-        "monochromeImage": "./assets/images/j-G6PUes.jpg"
+        "foregroundImage": "./assets/images/splash.jpg",
+        "monochromeImage": "./assets/images/splash.jpg"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -35,7 +35,7 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/j-G6PUes.jpg",
+          "image": "./assets/images/splash.jpg",
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#ffffff",
