--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "eGovSA",
     "version": "2.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/splash.jpg",
+    "icon": "./assets/images/splash-icon.png",
     "scheme": "egovsa",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
@@ -16,11 +16,11 @@
       }
     },
     "android": {
-      "icon": "./assets/images/splash.jpg",
+      "icon": "./assets/images/splash-icon.png",
       "adaptiveIcon": {
         "backgroundColor": "#de6c0fff",
-        "foregroundImage": "./assets/images/splash.jpg",
-        "monochromeImage": "./assets/images/splash.jpg"
+        "foregroundImage": "./assets/images/splash-icon.png",
+        "monochromeImage": "./assets/images/splash-icon.png"
       },
       "edgeToEdgeEnabled": true,
       "predictiveBackGestureEnabled": false,
@@ -35,10 +35,10 @@
       [
         "expo-splash-screen",
         {
-          "image": "./assets/images/splash.jpg",
-          "imageWidth": 200,
+          "image": "./assets/images/splash-icon.png",
+          "imageWidth": 150,
           "resizeMode": "contain",
-          "backgroundColor": "#ffffff",
+          "backgroundColor": "#232323",
           "dark": {
             "backgroundColor": "#000000"
           }
